# HRMS-Application

./: .gitignore  README.md  main.py  pyproject.toml  run_server.bat
app/api/: router.py
app/api/v1/: parser_router.py  resume_router.py
app/auth/: security.py
app/core/: app.py  config.py  database.py  logger.py
app/crud/: attachment_repo.py  candidate_rawdata_repo.py  resume_auditlog_repo.py  resume_repo.py
app/crud/auth/: auth_repo.py
app/crud/dashboard/: admin_dashboard_repo.py
app/crud/dropdown/: dropdown_repo.py
app/crud/interview/: interview_repo.py  interviewfeedback_repo.py
app/crud/job/: job_candidates_repo.py  job_repo.py
app/crud/login_audit/: login_audit_repo.py
app/crud/user/: user_permissions_repo.py  user_role_permissions_repo.py  user_roles_repo.py  users_repo.py
app/models/: __init__.py  attachment_model.py  candidate_rawdata_model.py  menu_master_model.py  resume_auditlog_model.py  resume_model.py
app/models/dropdown/: dropdown_model.py
app/models/interview/: interview_model.py
app/models/job/: job_candidates_model.py  job_model.py  stage_history_model.py
app/models/login_audit/: login_audit_model.py
app/models/user/: user_roles_model.py  (+2 more)
app/schemas/: attachment_schema.py  candidate_rawdata_schema.py  parser_schema.py  resume_auditlog_schema.py  resume_schema.py
app/services/: attachment_service.py  candidate_rawdata_service.py  experience_service.py  parser_normalizer.py  parser_service.py  resume_auditlog_service.py  resume_service.py  resume_validator.py
app/utils/: extract_text.py
scripts/: setup_db.sql
(+38 files in other folders)
